# Intro-To-ML-Assignment-1

./: pyproject.toml
Assignment1/: Chapter_1.ipynb  linear_regression.py  logisitc_regression.py
Assignment1/.ipynb_checkpoints/: Chapter_1-checkpoint.ipynb
assignment1/: Chapter_1.ipynb  linear_regression.py  logisitc_regression.py
assignment1/.ipynb_checkpoints/: linear_regression-checkpoint.py
assignment1/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
assignment1/catboost_info/learn/: events.out.tfevents
