[project]
name = "assignment1"
version = "0.1.0"
description = "Assignment 1"
authors = [
    {name = "Bård Bysveen",email = "baardby@stud.ntnu.no"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
